--- a/todo-list.html
+++ b/todo-list.html
@@ -10,12 +10,12 @@
 <body>
   <h1>Todo List</h1>
     <section class="container">
-      <div class="input-grid">
+      <div class="input-wrapper">
         <input type="text" id="js-name-input" placeholder="Todo name">
         <input type="date" id="js-date-input">
         <button class="btn">Add</button>
       </div>
-      <div class="js-task task-grid"></div>
+      <div class="js-task task-wrapper"></div>
     </section>
 </body>
 </html>
