--- a/todo-list.html
+++ b/todo-list.html
@@ -11,8 +11,8 @@
   <h1>Todo List</h1>
     <section class="container">
       <div class="input-wrapper">
-        <input type="text" id="js-name-input" placeholder="Todo name">
-        <input type="date" id="js-date-input">
+        <input class="input" type="text" id="js-name-input" placeholder="Todo">
+        <input class="input" type="date" id="js-date-input">
         <button class="btn">Add</button>
       </div>
       <div class="js-task task-wrapper"></div>
